--- a/style/style.css
+++ b/style/style.css
@@ -196,9 +196,10 @@ main {
     transition: background-color 0.3s;
 }
 
-.nav-button i {
-    font-size: 75px;
+.nav-button svg {
+    margin: 22%;
 }
+
 
 
 
@@ -285,6 +286,8 @@ footer a:hover {
 
 
 
+
+
 @media (max-width: 830px) {
 
     h2 {
@@ -330,33 +333,28 @@ footer a:hover {
 
 
     .main-conteneur {
-        width: 100%;
+        width: 119%;
         height: 465px;
         min-width:0px;
         justify-content: center;
     }
 
     .conteneur-cards {
-        width: 99%;
+        width: 100%;
         height: 100%;
         min-width: 0px;
     }
 
 
     .nav-button {
-        width: 1%;
+        width: 15%;
         aspect-ratio: 1 / 1;   
     }
     .nav-button-left {
         transform: translate(50%, 0px);
-        transform: scale(10);
     }
     .nav-button-right {
         transform: translate(-50%, 0px);
-        transform: scale(10);
-    }
-    .nav-button i {
-        font-size: 15%;
     }
 
 
